<resources>
    <string name="app_name">PillsKeeper</string>

    <!-- Strings for SignUpActivity Activity-->
    <string name="signup_button">Registrati</string>
    <string name="signup_name">Nome</string>
    <string name="signup_surname">Cognome</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="error_values">Uno o piu\' valori non sono corretti. Inserire nuovamente le informazioni</string>

    <!--Strings for adding Friend/Doctor-->
    <string name="nome">Nome:</string>
    <string name="cognome">Cognome:</string>
    <string name="relationFriend">Relazione:</string>
    <string name="yes">Si</string>
    <string name="email">Email:</string>
    <string name="nameFriend">Nome amico</string>
    <string name="surnameFriend">Cognome amico</string>
    <string name="emailFriend">Email amico</string>
    <string name="confirmButton">Conferma</string>
    <string name="deleteButton">Cancella</string>
    <string name="phoneNumber">Numero:</string>
    <string name="phoneNumberHint">Numero Cellulare</string>
    <string name="editButton">Modifica</string>
    <string name="abortButton">Annulla</string>
    <string name="closeButton">Chiudi</string>
    <string name="saveButton">Salva</string>


    <!--MedicinesListActivity-->
    <string name="nothingToSee">Nessuna Medicina trovata!</string>
    <string name="addMedicineText">Aggiungi nuova medicina</string>


    <!--Menu buttons-->
    <string name="username">Nome Utente</string>
    <string name="appointmentMenu">Appuntamenti</string>
    <string name="user_settings">Impostazioni Utente</string>
    <string name="friends">Friends</string>
    <string name="edit_profile">Modifica Profilo</string>
    <string name="pharmacies">Farmacie in zona</string>
    <string name="logout">Logout</string>
    <string name="danger" translatable="false">Danger Zone</string>


    <string name="addReminder">Aggiungi Promemoria</string>
    <string name="totalQuantity">Inserire la quantità totale contenuta nella confezione</string>
    <string name="totalQuantityEditing">Inserire la nuova quantità totale contenuta nella confezione</string>
    <string name="reminder">Appuntamenti</string>
    <string name="remainingQuantity">Inserire la quantità rimanente nella confezione</string>
    <string name="remainingQuantityEditing">Inserire la nuova quantità rimanente nella confezione</string>
    <string name="medType">Tipo Medicina</string>
    <string name="medNameHint">Inserire il nome del farmaco</string>
    <string name="medNameTitle">Leggi il nome del farmaco cliccando qui -></string>
    <string name="camera">Fotocamera</string>

    <!--Reminders-->
    <string name="select_week">Selezionare i giorni in cui si ripete il promemoria</string>
    <string name="monday">Lunedì</string>
    <string name="tuesday">Martedì</string>
    <string name="wednesday">Mercoledì</string>
    <string name="thursday">Giovedì</string>
    <string name="friday">Venerdì</string>
    <string name="saturday">Sabato</string>
    <string name="sunday">Domenica</string>
    <string name="time">Orario: </string>
    <string name="espire_date">Seleziona una data di fine per il promemoria</string>
    <string name="starting_date">Seleziona una data di inizio per il promemoria </string>
    <string name="quantityInsert">Inserire la quantità</string>
    <string name="quantity">Quantità:</string>

    <string name="monthRB">Mesi</string>
    <string name="weekRB">Settimane</string>
    <string name="weekMonthPause">Settimane/mesi di pausa:</string>
    <string name="weekMonthConsecutive">Settimane/mesi Consecutive:</string>

    <!--  -->
    <string name="Pills">Pillole</string>
    <string name="Syrup">Sciroppo</string>
    <string name="Suppository">Supposte</string>
    <string name="Undefined">Non definito</string>
    <string name="appointmentName">Titolo</string>
    <string name="timeAppointment">Orario:</string>
    <string name="additionalNoteAppointment">Note Addizionali …</string>
    <string name="dateButton">dd/mm/yyyy</string>
    <string name="dateButtonFormatted">%1$d/%2$d/%3$d</string>
    <string name="dateSelectionLabel">Seleziona una data:</string>
    <string name="medicineAlreadyExists">Attenzione, Medicina già presente!</string>

    <!--Location-->
    <string name="query_location">https://www.google.com/maps/search/?api=1&amp;query=farmacie</string>

    <!--Personal Info Activity-->
    <string name="name">Nome:</string>
    <string name="surname">Cognome:</string>
    <string name="name_hint">Nome</string>
    <string name="surname_hint">Cognome</string>
    <string name="email_hint">Email</string>

    <!--Login-->
    <string name="login_button">Accedi</string>
    <string name="signup_activity">Registrati</string>
    <string name="login_text">Benvenuto su Pillskeeper! Esegui l\'accesso oppure registrati per utilizzare l\'applicazione</string>
    <string name="error_login">Username o password errati, riprova</string>
    <string name="resetPassword">Reimposta password</string>
    <string name="loginDialog">Inserisci la password per confermare l\'operazione</string>

    <!--Mail-->
    <string name="mailsubject">Richiesta ricetta farmaco: </string>
    <string name="mailtext">Salve, il sistema PillsKeeper ha generato il seguente avviso: </string>
    <string name="sendMail">Invia Mail</string>

    <!-- Titoli android Manifest-->
    <string name="chemistsTitle">Farmacie in zona</string>
    <string name="appointmentTitle">Aggiungi Appuntamento:</string>
    <string name="medicineListTitle">Lista Medicine</string>
    <string name="textReaderActivityTitle">Fotocamera</string>
    <string name="pillsFormActivityTitle">Nuova Medicina</string>
    <string name="pillsListActivityTitle">Lista Medicine</string>
    <string name="singUpTitle">Registrazione</string>
    <string name="friendListActivityTitle">Lista Amici</string>
    <string name="homeActivityTitle" translatable="false">Home</string>
    <string name="functionalities">Funzionalità</string>
    <string name="settingsMenu">Impostazioni</string>
    <string name="expiryMenu">Medicine terminate</string>
    <string name="search_chemist">Riceca Farmacie</string>
    <string name="user_settingsActivity">Modifica dati personali</string>
    <string name="login_activity" translatable="false">Login</string>
    <string name="expiredMedicines">Farmaci in esaurimento</string>
    <string name="reminderListActivityTitle">Promemoria</string>
    <string name="reminderEditActivityTitle">Modifica Promemoria</string>

    <!-- String for WelcomeActivity-->
    <string name="welcome">Benvenuto!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="FormOneTitle">Quale farmaco vuoi inserire?</string>
    <string name="FormOneTitle2">Seleziona la tipologia del farmaco</string>
    <string name="next">Avanti</string>
    <string name="quantityexample">Es: 16</string>
    <string name="reminderTitle">Vuoi aggiungere un promemoria per la medicina inserita?</string>
    <string name="confirmText">Continua senza promemoria</string>
    <string name="reminderList">Promemoria Inseriti: </string>
    <string name="dialogChooseReminderText">Il promemoria si ripete nel tempo?</string>
    <string name="no" translatable="false">No</string>
    <string name="selectSpecificDateReminder">Seleziona il giorno in cui vuoi ricevere l\'avviso</string>
    <string name="timeSelectReminder">Seleziona l\'orario dell\'avviso</string>
    <string name="dosageReminder">Seleziona la quantità da assumere</string>
    <string name="_0">0</string>
    <string name="or">Oppure premi salva per continuare</string>
    <string name="additionalNotes">Note Addizionali:</string>
    <string name="toxicWords">Riscontrato linguaggio volgare. Inserire nuovamente il nome!</string>


    <!--Error message -->
    <string name="networkError">Impossibile accedere alla rete. Controlla la connessione e riprova</string>
    <string name="addFriend">Aggiungi un amico prima di inviare la mail!</string>
    <string name="loginDialogError">Credenziali errate, riprova!</string>
    <string name="message_title">Attenzione!</string>
    <string name="genericInfoError">Perfavore inserire valori corretti</string>
    <string name="dateError">Perfavore inserire una data corretta</string>
    <string name="appointmentError">Appuntamento gia\' presente</string>
    <string name="genericDelete">Non è stato possibile cancellare</string>
    <string name="emailPassword">Controlla la tua mail, ti abbiamo inviato un link per il reset password!</string>
    <string name="oops">Oops! Si è verificato un errore, riprova!</string>

    <!--Danger Activity-->
    <string name="deleteAccountButton">Elimina account</string>
    <string name="disclaimer">ATTENZIONE! Procedendo con l\'eliminazione dell\'account verranno persi tutti i dati e non sarà più possibile accedere a PillsKeeper con questo account</string>

    <string name="search_button">Cerca</string>
    <string name="back_button">Indietro</string>
    <string name="addNoteTitle">Aggiungi eventuali note al promemoria</string>


</resources>
