<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/friends"/>

        <item
            android:id="@+id/nav_medicines"
            android:icon="@drawable/ic_friends"
            android:title="@string/medicineListTitle"/>

        <item
            android:id="@+id/nav_pharmacies"
            android:icon="@drawable/ic_pharmacy"
            android:title="@string/pharmacies"/>

    </group>


    <item android:title="ciao">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/edit_profile"/>
            <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
        </menu>
    </item>
</menu>