<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeek">

        <CheckBox
            android:id="@+id/checkBoxMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewStartingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_date"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWeek"
        app:layout_constraintStart_toStartOf="@+id/textViewFinishDate"
        app:layout_constraintTop_toTopOf="@+id/textViewWeek" />

    <Button
        android:id="@+id/buttonDateStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:minWidth="110dp"
        android:minHeight="46dp"
        android:layout_marginTop="10dp"
        android:text="@string/dateButton"
        app:layout_constraintStart_toStartOf="@+id/textViewStartingDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartingDate" />

    <TextView
        android:id="@+id/textViewFinishDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/espire_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewWeek"
        app:layout_constraintTop_toBottomOf="@+id/buttonDateStart" />

    <Button
        android:id="@+id/buttonDateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:minWidth="110dp"
        android:minHeight="46dp"
        android:text="@string/dateButton"
        app:layout_constraintStart_toStartOf="@+id/textViewFinishDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewFinishDate" />

    <Spinner
        android:id="@+id/spinnerMinutesRem2"
        android:layout_width="86dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerHoursRem2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerHoursRem2"
        app:layout_constraintTop_toTopOf="@+id/spinnerHoursRem2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="@+id/radioGroupDays"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDays" />

    <Spinner
        android:id="@+id/spinnerHoursRem2"
        android:layout_width="86dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewPoints2"
        android:layout_width="10dp"
        android:layout_height="40dp"
        android:text=":"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerHoursRem2"
        app:layout_constraintEnd_toStartOf="@+id/spinnerMinutesRem2"
        app:layout_constraintStart_toEndOf="@+id/spinnerHoursRem2"
        app:layout_constraintTop_toTopOf="@+id/spinnerHoursRem2"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextAddNotesRem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:gravity="top"
        android:hint="@string/additionalNoteAppointment"
        android:inputType="textLongMessage"
        android:minHeight="150dp"
        app:layout_constraintBottom_toTopOf="@+id/abortButtonReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDosage" />

    <TextView
        android:id="@+id/textViewDosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dosageReminder"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textViewPoints2" />

    <Spinner
        android:id="@+id/dosageSpinnerReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDosage"
        app:layout_constraintStart_toEndOf="@+id/textViewDosage"
        app:layout_constraintTop_toTopOf="@+id/textViewDosage" />

    <Button
        android:id="@+id/abortButtonReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="bottom|start"
        android:minWidth="110dp"
        android:text="@string/abortButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButtonReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:minWidth="110dp"
        android:text="@string/saveButton"
        android:textSize="18sp"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintBottom_toBottomOf="@+id/abortButtonReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/abortButtonReminder" />

</androidx.constraintlayout.widget.ConstraintLayout>