<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.pills.reminder.ReminderActivity">

    <TextView
        android:id="@+id/textViewWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/select_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeek">

        <RadioButton
            android:id="@+id/radioButtonMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/monday" />

        <RadioButton
            android:id="@+id/radioButtonTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tuesday" />

        <RadioButton
            android:id="@+id/radioButtonWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/wednesday" />

        <RadioButton
            android:id="@+id/radioButtonThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/thursday" />

        <RadioButton
            android:id="@+id/radioButtonFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/friday" />

        <RadioButton
            android:id="@+id/radioButtonSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/saturday" />

        <RadioButton
            android:id="@+id/radioButtonSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/sunday" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="25dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerMinutes"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPoints"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinnerHours"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewPoints"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPoints"
        android:layout_width="5dp"
        android:layout_height="23dp"
        android:text=":"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="125dp"
        android:text="@string/confermaButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewFinishDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/espire_date"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="174dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="125dp"
        android:layout_height="46dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFinishDate" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:text="@string/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuantity"
        tools:layout_editor_absoluteX="235dp" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="124dp"
        android:text="@string/deleteButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>