<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUp">

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:onClick="signUp"
        android:text="@string/signup_button"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintStart_toStartOf="@+id/mailField"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <EditText
        android:id="@+id/mailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/signup_email"

        app:layout_constraintBottom_toBottomOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="@+id/nameField"
        app:layout_constraintStart_toStartOf="@+id/nameField"
        app:layout_constraintTop_toTopOf="@+id/passwordField" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:hint="@string/signup_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surnameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:hint="@string/signup_surname"
        app:layout_constraintBottom_toBottomOf="@+id/nameField"
        app:layout_constraintStart_toEndOf="@+id/nameField"
        app:layout_constraintTop_toTopOf="@+id/nameField"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/surnameField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/surnameField"
        app:layout_constraintTop_toBottomOf="@+id/surnameField" />

</androidx.constraintlayout.widget.ConstraintLayout>